Fix text align footer.

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -37,4 +37,5 @@ p {
   color: white;
   font-size: 11px;
   background-color: dimgray;
+  text-align: left; 
 }
